	* Check for sed in configure.
	* Fix SQL schema (SQL syntax errors, missing permission queries)
	* Prevent spvd from quitting if no plugins are configured.
	* Fixed wrong permission on log file, closes #2085.
	* Fixed use of unitialized class member 'name', closes: #2986.
	* Using new webengine-spv get_checks parameter :  get_detailed_infos.
	* Retreive status_infos to let jobs access them.

Version 0.6.2 Released on 2010/01/27

	* Change setCheckStatus method to match convention.
	* sample: drop unused imports.
	* sample: fix usage of basejob API.
	* sample: add some documentation.
	* Added references to plugins manpages in spvd.conf manual, refs: #2793.

Version 0.6.1 Released on 2010/01/25

	* Fixed check result log message to use 'message' instead of 'check_message', closes: #2898.
	* Updated database schema on spv-schema.sql file (rewrote all file).
	* Changed calls to importer to use new spv webservices located on
	  services.py. Modified internal structure to store object_infos and
	  check_infos.
	* Added possility to set check status_infos result by calling setCheckStatus helper.

Version 0.6.0 Released on 2010/01/12

	* Updated database schema for status informations, refs: #2831, #2832.
	* Allow setting Importer timeout from config, refs: #2825.
	* Corrected SQL code of checks_list VIEW on data folder wich was buggy.

Version 0.5.0 Released on 2010/01/07

	* Added a 'log' object for each plugins and jobs, refs: #2814.
	* Prepend job logs with #<status_id>, closes: #2814.
	* Add support for status informations, closes: #2832.

Version 0.4.0 Released on 2009/12/10

	* Moved streams plugin to his own debian package, refs: #2313.
	* Added one log file for each check for each plugin, closes: #2643.
	* Removed python dependencies on webengine, closes: #2644.
	* Added sub-name support in configuration fields (like "[svpd:streams:volume]"), refs: #2645.
	* Added a way for plugins to provide their conf requirements, closes: #2645.